# coffee-overflow-new

./: .env  .env.backup2  .gitignore  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SOLANA_DEPLOYMENT.md  deploy-sepolia.sh  docker-compose.yml  env.example  hardhat.config.cjs  index.html  package-lock.json  package.json  server.js  setup.sh  tailwind.config.ts
auth-server/: README.md  env.example  package-lock.json  package.json
auth-server/prisma/: schema.prisma
backend/: .env  README.md  app.py  env.example  requirements.txt  start.sh
cache/: solidity-files-cache.json
contracts/: GreenHydrogenCredits.sol
prisma/: schema.prisma  seed.ts
scripts/: deploy.cjs
solana-program/: Anchor.toml
solana-program/programs/green_hydrogen_credits/: Cargo.toml
solana-program/programs/green_hydrogen_credits/src/: lib.rs
src/: App.tsx  index.css
src/components/: AuditorDashboard.tsx  BuyerDashboard.tsx  BuyerInterface.tsx  ChatInterface.tsx  FeaturesSection.tsx  FloatingChat.tsx  HeroSection.tsx  Login.tsx  Message.tsx  Navbar.tsx  ProducerDashboard.tsx  ProducerInterface.tsx  ProtectedRoute.tsx  RoleBasedDashboard.tsx  ThemeToggle.tsx  ValidatorDashboard.tsx  ValidatorInterface.tsx
src/config/: blockchain.ts
src/contexts/: AuthContext.tsx  EthereumContext.tsx  SolanaContext.tsx  ThemeContext.tsx
src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  OAuthCallback.tsx  Register.tsx
src/services/: api.ts  ethereum.ts  prisma.ts  solana.ts
terra-spark-nextjs/: README.md  package-lock.json  package.json  setup.sh
terra-spark-nextjs/auth-server/: server.ts  (+1 more)
(+18 files in other folders)
